tests/ui/consts/min_const_fn/bad_const_fn_body_ice.stderr
error[E0015]: cannot call non-const associated function `Box::<[i32; 3]>::new_uninit` in constant functions
  --> $DIR/bad_const_fn_body_ice.rs:2:5
   |
LL |     vec![1, 2, 3]
   |     ^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const function `std::boxed::box_assume_init_into_vec_unsafe::<i32, 3>` in constant functions
  --> $DIR/bad_const_fn_body_ice.rs:2:5
   |
LL |     vec![1, 2, 3]
   |     ^^^^^^^^^^^^^
   |
note: function `box_assume_init_into_vec_unsafe` is not const
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
